# Loader

./: .gitmodules  CMakeLists.txt
src/: Loader.cpp  Loader.h
src/test/: test.cpp
